--- a/WebsiteBanSach/Areas/Admin/Views/Account/Index.cshtml
+++ b/WebsiteBanSach/Areas/Admin/Views/Account/Index.cshtml
@@ -55,8 +55,9 @@
                                 <td>@item.FullName</td>
                                 <td>@item.Email</td>
                                 <td>
-                                    <a href="/admin/account/edit/@item.UserName" class="btn btn-sm btn-primary"><i class='fas fa-edit'></i> Sửa</a>
-                                    <a href="#" data-user="@item.UserName" class="btn btn-sm btn-danger btnDelete"><i class='fas fa-trash'></i> Xóa</a>
+                                    
+                                    @*<a href="/admin/account/edit/@item.UserName" class="btn btn-sm btn-primary"><i class='fas fa-edit'></i> Sửa</a>
+                                    <a href="#" data-user="@item.UserName" class="btn btn-sm btn-danger btnDelete"><i class='fas fa-trash'></i> Xóa</a>*@
                                 </td>
                             </tr>
                             i++;
