--- a/WebsiteBanSach/Areas/Admin/Views/Products/Index.cshtml
+++ b/WebsiteBanSach/Areas/Admin/Views/Products/Index.cshtml
@@ -211,7 +211,7 @@
                     }
                 });
                 if (str.length > 0) {
-                    var conf = confirm("Bạn có chắc chắn muốn xóa tất cả các tin tức đang được chọn không?");
+                    var conf = confirm("Bạn có chắc chắn muốn xóa tất cả các sản phẩm đang được chọn không?");
                     if (conf) {
                         $.ajax({
                             url: "/admin/products/deleteAll",
