--- a/WebsiteBanSach/Views/Account/Login.cshtml
+++ b/WebsiteBanSach/Views/Account/Login.cshtml
@@ -23,7 +23,7 @@
     <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-5 containLogin">
-            <h2 class="text-center" style="font-weight:bolder">@ViewBag.Title.</h2>
+            <h2 class="text-center" style="font-weight:bolder;color:#ffffff;">@ViewBag.Title.</h2>
             <section id="loginForm">
                 @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
@@ -32,14 +32,14 @@
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-warning" })
                     <div class="form-group">
-                        @Html.LabelFor(m => m.UserName, new { @class = "col-md-10 control-label", @style = "font-weight:bolder" })
+                        @Html.LabelFor(m => m.UserName, new { @class = "col-md-10 control-label", @style = "font-weight:bolder;color:#ffffff;" })
                         <div class="col-md-10">
                             @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
                             @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-warning"})
                         </div>
                     </div>
                     <div class="form-group">
-                        @Html.LabelFor(m => m.Password, new { @class = "col-md-10 control-label", @style = "font-weight:bolder" })
+                        @Html.LabelFor(m => m.Password, new { @class = "col-md-10 control-label", @style = "font-weight:bolder;color:#ffffff;" })
                         <div class="col-md-10">
                             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-warning" })
@@ -49,7 +49,7 @@
                         <div class="col-md-offset-2 col-md-10">
                             <div class="checkbox">
                                 @Html.CheckBoxFor(m => m.RememberMe)
-                                @Html.LabelFor(m => m.RememberMe, new {@style = "font-weight:bolder" })
+                                @Html.LabelFor(m => m.RememberMe, new {@style = "font-weight:bolder;color:#ffffff;" })
                             </div>
                         </div>
                     </div>
