--- a/WebsiteBanSach/Views/Account/Register.cshtml
+++ b/WebsiteBanSach/Views/Account/Register.cshtml
@@ -18,16 +18,16 @@
     <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-5 containLogin">
-            <h2 class="text-center" style="font-weight:bolder">@ViewBag.Title.</h2>
+            <h2 class="text-center" style="font-weight:bolder; color:azure">@ViewBag.Title.</h2>
 
             @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4 class="text-center">Tạo một tài khoản mới</h4>
+                <h4 class="text-center" style="color:azure">Tạo một tài khoản mới</h4>
                 <hr />
                 @Html.ValidationSummary(true,"", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label", @style = "font-weight:bolder" })
+                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label", @style = "font-weight:bolder;color:#ffffff;" })
                     <div class="col-md-10">
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-warning" })
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-5 control-label", @style = "font-weight:bolder" })
+                    @Html.LabelFor(m => m.Password, new { @class = "col-md-5 control-label", @style = "font-weight:bolder;color:#ffffff;" })
                     <div class="col-md-10">
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-warning" })
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-5 control-label", @style = "font-weight:bolder" })
+                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-5 control-label", @style = "font-weight:bolder;color:#ffffff;" })
                     <div class="col-md-10">
                         @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-warning" })
