--- a/WebsiteBanSach/Views/Home/Index.cshtml
+++ b/WebsiteBanSach/Views/Home/Index.cshtml
@@ -10,9 +10,9 @@
         <div class="row align-items-center fill_height">
             <div class="col">
                 <div class="main_slider_content">
-                    <h6>Spring / Summer Collection 2017</h6>
-                    <h1>Get up to 30% Off New Arrivals</h1>
-                    <div class="red_button shop_now_button"><a href="#">shop now</a></div>
+                    
+                    <h1>Hàng mới về giảm giá đến 20%</h1>
+                    <div class="red_button shop_now_button"><a href="/san-pham">Mua hàng ngay</a></div>
                 </div>
             </div>
         </div>
@@ -35,33 +35,33 @@
         <div class="row align-items-center">
             <div class="col-lg-6">
                 <div class="deal_ofthe_week_img">
-                    <img src="~/Content/assets/images/deal_ofthe_week.png" alt="">
+                    <img src="~/Content/assets/images/book2.jpg" alt="">
                 </div>
             </div>
             <div class="col-lg-6 text-right deal_ofthe_week_col">
                 <div class="deal_ofthe_week_content d-flex flex-column align-items-center float-right">
                     <div class="section_title">
-                        <h2>Deal Of The Week</h2>
+                        <h2>Thời gian khuyến mãi còn lại</h2>
                     </div>
                     <ul class="timer">
                         <li class="d-inline-flex flex-column justify-content-center align-items-center">
                             <div id="day" class="timer_num">03</div>
-                            <div class="timer_unit">Day</div>
+                            <div class="timer_unit">Ngày</div>
                         </li>
                         <li class="d-inline-flex flex-column justify-content-center align-items-center">
                             <div id="hour" class="timer_num">15</div>
-                            <div class="timer_unit">Hours</div>
+                            <div class="timer_unit">Giờ</div>
                         </li>
                         <li class="d-inline-flex flex-column justify-content-center align-items-center">
                             <div id="minute" class="timer_num">45</div>
-                            <div class="timer_unit">Mins</div>
+                            <div class="timer_unit">Phút</div>
                         </li>
                         <li class="d-inline-flex flex-column justify-content-center align-items-center">
                             <div id="second" class="timer_num">23</div>
-                            <div class="timer_unit">Sec</div>
+                            <div class="timer_unit">Giây</div>
                         </li>
                     </ul>
-                    <div class="red_button deal_ofthe_week_button"><a href="#">shop now</a></div>
+                    <div class="red_button deal_ofthe_week_button"><a href="/san-pham">Mua hàng ngay</a></div>
                 </div>
             </div>
         </div>
