--- a/WebsiteBanSach/Views/News/Partial_News_Home.cshtml
+++ b/WebsiteBanSach/Views/News/Partial_News_Home.cshtml
@@ -22,7 +22,7 @@
                             <div class="blog_content d-flex flex-column align-items-center justify-content-center text-center">
                                 <h4 class="blog_title">@item.Title</h4>
                                 <span class="blog_meta">by @item.CreatedBy | @item.CreatedDate.ToString("MMM dd,yyyy")</span>
-                                <a class="blog_more" href="#">Chi tiết</a>
+                                <a class="blog_more" href="@item.Alias-n@(item.Id)">Chi tiết</a>
                             </div>
                         </div>
                     </div>
