--- a/WebsiteBanSach/Views/ShoppingCart/CheckOut.cshtml
+++ b/WebsiteBanSach/Views/ShoppingCart/CheckOut.cshtml
@@ -63,7 +63,19 @@
             }
         }
 
+        
+
+
         $(document).ready(function () {
+            //hiển thị form thanh toán vnpay khi chọn phương thức là chuyển khoản
+            $('body').on('change', '#drTypePayment', function () {
+                var type = $(this).val();
+                $('#load_form_payment').hide();
+                if (type == "2") {
+                    $('#load_form_payment').show();
+                }
+            })
+
             $('#myForm').validate({
                 rules: {
                     'CustomerName': {
